<resources>
    <string name="app_name">revomvpandriodapp</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_shop">Shop</string>
    <string name="msg_retailer_busine">Retailer Business Name</string>
    <string name="lbl_home_address">Home Address</string>
    <string name="msg_enter_your_addr">Enter your Address</string>
    <string name="lbl_n">N</string>
    <string name="lbl_today_s_price">Today\u2019s Price</string>
    <string name="msg_don_t_get_code2">Don\u2019t Get Code?  Get Another Code</string>
    <string name="msg_retailer_s_phon">Retailer\u2019s PhoneNumber</string>
    <string name="msg_enter_your_code">Enter your code here</string>
    <string name="msg_enter_your_busi">Enter your Business Address</string>
    <string name="lbl_orders_history">Orders History</string>
    <string name="lbl_home">Home</string>
    <string name="msg_congrats_sign">Congrats 
Sign Up Completed</string>
    <string name="msg_enter_your_shop2">Enter your Shop Address</string>
    <string name="lbl_customer_name">Customer Name</string>
    <string name="msg_customer_s_phon">Customer\u2019s PhoneNumber</string>
    <string name="msg_kindly_confirm">Kindly Confirm if Your Gas Cylinder Has being 
Return and that the delivered Weight Tally With
 Expected Delivering Weight  </string>
    <string name="msg_enter_your_pass">Enter your password</string>
    <string name="msg_resturant_sign">Resturant Sign Up</string>
    <string name="lbl_retailers">Retailers </string>
    <string name="msg_enter_deliverin">Enter Delivering Charge </string>
    <string name="lbl_confirm_order">Confirm order</string>
    <string name="lbl_freeborn_gas">FreeBorn Gas</string>
    <string name="lbl_set_stock">Set Stock</string>
    <string name="lbl_order_status">Order Status</string>
    <string name="msg_retailer_profil">Retailer Profile</string>
    <string name="msg_back_to_homepag">Back to homepage</string>
    <string name="msg_enter_selling_p">Enter Selling Price</string>
    <string name="lbl_enter_quantity">Enter Quantity</string>
    <string name="msg_retailer_s_shop">Retailer\u2019s Shop Address</string>
    <string name="msg_code_send_to_y">Code send to  your email</string>
    <string name="lbl_revo_gas">Revo Gas</string>
    <string name="lbl_hello">Hello, </string>
    <string name="msg_enter_your_ema">Enter your  Email</string>
    <string name="msg_set_your_stock">Set Your Stock Level 
And Selling Price</string>
    <string name="msg_accept_this_ref">Accept This Refill Request, only if you 
guarantee Proper Service </string>
    <string name="msg_enter_your_shop">Enter your Shop Name</string>
    <string name="msg_top_up_or_refil">Top-up or Refill Your Gas Cylinder</string>
    <string name="msg_don_t_get_code">Don\u2019t Get Code?   Get Another Code</string>
    <string name="lbl_retailer_shop">Retailer Shop</string>
    <string name="lbl_support">Support</string>
    <string name="lbl_date">date</string>
    <string name="msg_interest_to_par">Interest to partnering with us?</string>
    <string name="msg_4_anibaba_ke">4, Anibaba , Ketu, Ikorodu, Lagos</string>
    <string name="msg_don_t_have_acco">Don\u2019t have account? Sign up</string>
    <string name="msg_enter_your_firs">Enter your First Name</string>
    <string name="lbl_1010101010101">1010101010101</string>
    <string name="lbl_request_by_kg">Request By Kg</string>
    <string name="lbl_ikorodu">ikorodu</string>
    <string name="msg_what_do_you_thi">What do you think?</string>
    <string name="lbl_selleing_price">Selleing Price </string>
    <string name="msg_delivering_weig">Delivering Weight </string>
    <string name="lbl_10_04_2023">10.04.2023</string>
    <string name="lbl_800">800</string>
    <string name="lbl_2023">2023</string>
    <string name="msg_customer_addres">Customer Address</string>
    <string name="lbl_pending">Pending</string>
    <string name="lbl_details">Details</string>
    <string name="msg_select_business">Select Business Area</string>
    <string name="lbl_don_t_get_code">Don\u2019t Get Code?   </string>
    <string name="msg_household_sign">HouseHold Sign Up</string>
    <string name="lbl_gas_refill">Gas Refill</string>
    <string name="lbl_kg">/Kg</string>
    <string name="lbl_completed">Completed</string>
    <string name="lbl_fund_wallet">Fund Wallet</string>
    <string name="lbl_selling_price">Selling Price</string>
    <string name="msg_code_send_to_y2">Code send to  your mobile number</string>
    <string name="lbl_a_mobile_number">A Mobile Number</string>
    <string name="lbl_pickup_weight">PickUp Weight</string>
    <string name="msg_20_isawo_road">20, Isawo Road , Agric , Lagos</string>
    <string name="lbl_1200">1200</string>
    <string name="lbl_accept">Accept</string>
    <string name="lbl_shop_name">Shop Name </string>
    <string name="lbl_recent_orders">Recent  Orders</string>
    <string name="lbl_suppliers">Suppliers</string>
    <string name="lbl_show_all">Show all</string>
    <string name="msg_recent_gas_refi">Recent Gas Refills</string>
    <string name="msg_kindly_ensure_r">Kindly Ensure Refill Cylinder Weight Tally 
with Expected Delivery Weight</string>
    <string name="msg_enter_your_mob">Enter your  Mobile Number</string>
    <string name="lbl_manage_service">Manage Service </string>
    <string name="lbl_revo_gas_shop">Revo Gas Shop</string>
    <string name="lbl_thank_you">Thank You</string>
    <string name="lbl_set_address">Set Address</string>
    <string name="msg_your_order_with">Your Order With
 Order No:
Has Being Successfully 
Placed</string>
    <string name="lbl_canceled">Canceled</string>
    <string name="msg_enter_6_digit_v">Enter 6-digit
Verification code</string>
    <string name="msg_add_stock_quant">Add Stock Quantity In Kg</string>
    <string name="lbl_seun">Seun</string>
    <string name="lbl_an_email">An Email</string>
    <string name="lbl_supplier">Supplier</string>
    <string name="lbl_processing">Processing</string>
    <string name="lbl_menu">Menu</string>
    <string name="msg_complete_shop_p">Complete Shop Profile</string>
    <string name="lbl_search_energy">Search Energy</string>
    <string name="lbl_wallet">Wallet</string>
    <string name="msg_enter_your_busi2">Enter your Business Name</string>
    <string name="msg_enjoy_seamless">Enjoy Seamless Cooking </string>
    <string name="lbl_12kg">12Kg</string>
    <string name="msg_10_yaba_road">10, Yaba Road , Okorodu, Lagos</string>
    <string name="lbl_ketu">ketu</string>
    <string name="lbl_near_you">Near You</string>
    <string name="lbl_hello2">Hello,</string>
    <string name="msg_hi_bro_what_s">Hi bro! What\u2019s up?</string>
    <string name="msg_enter_your_last">Enter your Last Name</string>
    <string name="lbl_enter_pick_kg">Enter Pick Kg</string>
    <string name="lbl_0_0">0.0</string>
    <string name="msg_household_profi">Household Profile </string>
    <string name="msg_self_manage_ser">Self Manage Service</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_kosofe">kosofe</string>
    <string name="lbl_retailer_name">Retailer  Name</string>
    <string name="lbl_reject">Reject</string>
    <string name="lbl_hello_daniel">Hello Daniel</string>
    <string name="msg_transfer_fund_t">Transfer Fund To Your Wallet </string>
    <string name="lbl_order_date">Order Date</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_refill_gas">Refill Gas</string>
    <string name="lbl_ogudu">ogudu</string>
    <string name="lbl_2030">2030</string>
    <string name="msg_cylinder_pick_u">Cylinder Pick Up Kg</string>
    <string name="lbl_calculate_total">Calculate Total</string>
    <string name="lbl_0">0</string>
    <string name="lbl_gas_man_sign_up">Gas Man Sign Up</string>
    <string name="lbl_02">0%</string>
    <string name="msg_mark_refill_del">Mark Refill Delivered</string>
    <string name="lbl_shop_address">Shop Address</string>
    <string name="lbl_gas_man_details">Gas Man Details</string>
    <string name="msg_selling_price_k">Selling Price/Kg</string>
    <string name="lbl_rv100001">#RV100001</string>
    <string name="msg_top_up_stock_or">Top-up Stock or 
Set New Price</string>
    <string name="msg_verify_mobile_n">Verify Mobile Number</string>
    <string name="lbl_order_s_details">Order\u2019s Details</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_12kg2">12kg</string>
    <string name="lbl_1200_kg">1200/Kg</string>
    <string name="msg_deliver_cooking">Deliver Cooking Gas With Pride</string>
    <string name="lbl_don_t_get_code2">Don\u2019t Get Code?  </string>
    <string name="msg_delivery_charge">Delivery Charges</string>
    <string name="lbl_gas_level">Gas Level</string>
    <string name="msg_enter_home_addr">Enter Home Address</string>
    <string name="lbl_00_00">00.00</string>
    <string name="lbl_ba1200000">BA1200000</string>
    <string name="msg_this_order_is_p">This Order Is Pending Pickup, You Expected to
Enter Cylinder Weight Before Refilling </string>
    <string name="lbl_order_amount">Order Amount</string>
    <string name="lbl_seller_s_name">Seller\u2019s Name </string>
    <string name="msg_enter_your_emai">Enter your email/phone</string>
    <string name="msg_don_t_have_acco2">Don\u2019t have account? </string>
    <string name="lbl_request_by_cost">Request By Cost</string>
    <string name="lbl_new">New</string>
    <string name="msg_send_is_a_chat">Send is a chat app that focuses on cute...</string>
    <string name="msg_verify_email_ad">Verify Email Address</string>
    <string name="lbl_alapere">alapere</string>
    <string name="lbl_sign_up_with">Sign Up With</string>
    <string name="lbl_order_code">Order Code</string>
    <string name="lbl_delivery_weight">Delivery Weight </string>
    <string name="lbl_dan">Dan</string>
    <string name="lbl_orders">Orders</string>
    <string name="lbl_help">Help</string>
    <string name="msg_retailer_s_deta">Retailer\u2019s Details</string>
    <string name="msg_get_another_cod">Get Another Code</string>
    <string name="lbl_stock_level">Stock Level</string>
    <string name="lbl_shop_s_details">Shop\u2019s Details</string>
    <string name="msg_find_gas_suppli">Find Gas Supplier 
With Better Deal 
Around Your Location</string>
    <string name="lbl_refill_quantity">Refill Quantity</string>
    <string name="msg_enter_your_bus">Enter your  Business Name</string>
    <string name="lbl_confirm_refill">Confirm Refill </string>
    <string name="lbl_available_area">Available Area</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_wrong_code_enter">Wrong Code Enter</string>
    <string name="lbl_error">Error</string>
    <string name="msg_invalid_user_type">Invalid User Type</string>
    <string name="msg_error_loading_profile_de">Error Loading Profile Details</string>
    <string name="msg_error_signing_up">Error Signing Up</string>
    <string name="msg_error_loading_order_de">Error Loading Order Details</string>
    <string name="lbl_successful">Successful</string>
    <string name="msg_pickup_order_status_set">Pickup Order Status Set</string>
    <string name="msg_error_setting_order_st">Error Setting Order Status</string>
    <string name="msg_order_delivering_status_set">Order Delivering Status Set</string>
    <string name="msg_error_setting_order_de_st">Error Setting Order Delivering Status</string>
    <string name="msg_order_status_set">Order Status Set</string>
</resources>