<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listordercodeRowModel" type="com.revomvpandriodapp.app.modules.gasmanorderpage.data.model.ListordercodeRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnordercode"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:orientation="vertical">
        <TextView android:ellipsize="end" android:id="@+id/txtOrderCode"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtOrderCode}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/lbl_order_code"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtOrderAmount"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtOrderAmount}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/lbl_order_amount"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtRefillQuantity"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtRefillQuantity}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/lbl_refill_quantity"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPickUpKg"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtPickUpKg}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/lbl_pickup_kg"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDeliveryKg"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtDeliveryKg}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/lbl_delivery_kg"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtOrderStatus"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtOrderStatus}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/lbl_order_status"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCustomerAddres"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtCustomerAddres}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/msg_customer_addres"/>
        <TextView android:ellipsize="end" android:id="@+id/txtOrderDate"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtOrderDate}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/lbl_order_date"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCustomerName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtCustomerName}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/lbl_customer_name"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtCustomerPhone"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{listordercodeRowModel.txtCustomerPhone}"
            style="@style/txtRobotoromanregular13_1" tools:text="@string/msg_customer_phone"/>
    </LinearLayout>
</layout>
