<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="gasManEmailtokenVM" type="com.revomvpandriodapp.app.modules.gasmanemailtoken.data.viewmodel.GasManEmailtokenVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearGasManEmailTo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_12pxh"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="@dimen/_6pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <TextView android:id="@+id/txtEnter6digitV"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="match_parent"
            android:text="@{gasManEmailtokenVM.gasManEmailtokenModel.txtEnter6digitV}"
            style="@style/txtRobotoromanmedium30" tools:text="@string/msg_enter_6_digit_v"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{gasManEmailtokenVM.gasManEmailtokenModel.txtLanguage}"
            style="@style/txtRobotoMonorobotomonoregular15_1" tools:text="@string/msg_code_send_to_y"/>
        <EditText
            android:background="@drawable/rectangle_border_black_900_26_radius_10"
            android:ellipsize="end"
            android:hint="@string/msg_enter_your_code"
            android:id="@+id/etGasManEmailT" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={gasManEmailtokenVM.gasManEmailtokenModel.etGasManEmailTValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLanguageOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{gasManEmailtokenVM.gasManEmailtokenModel.txtLanguageOne}"
            style="@style/txtRobotoMonorobotomonoregular12" tools:text="@string/msg_don_t_get_code"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerifyEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_358pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/msg_verify_email_ad"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/msg_verify_email_ad"/>
    </LinearLayout>
</layout>
