<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="retailersetstockVM" type="com.revomvpandriodapp.app.modules.retailersetstock.data.viewmodel.RetailersetstockVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnarrowleft"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowleft"
            android:layout_height="@dimen/_12pxh"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="@dimen/_6pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtHowcanwehelp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_width="match_parent"
            android:text="@{retailersetstockVM.retailersetstockModel.txtHowcanwehelp}"
            style="@style/txtRobotoromanmedium24" tools:text="@string/msg_set_your_stock"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnaddstockquant"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_1">
            <TextView android:ellipsize="end"
                android:id="@+id/txtAddStockQuant"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{retailersetstockVM.retailersetstockModel.txtAddStockQuant}"
                style="@style/txtRobotoromanmedium17_1" tools:text="@string/msg_add_stock_quant"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_26_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_enter_quantity"
                android:id="@+id/etFirstname" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@={retailersetstockVM.retailersetstockModel.etFirstnameValue}"
                android:textColorHint="@color/gray_400"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSellingPriceK"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{retailersetstockVM.retailersetstockModel.txtSellingPriceK}"
            style="@style/txtRobotoromanmedium17_1" tools:text="@string/msg_selling_price_k"/>
        <EditText
            android:background="@drawable/rectangle_border_black_900_26_radius_10"
            android:ellipsize="end"
            android:hint="@string/msg_enter_selling_p"
            android:id="@+id/etLastname" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={retailersetstockVM.retailersetstockModel.etLastnameValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSetStock"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_316pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_set_stock"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_set_stock"/>
    </LinearLayout>
</layout>
