<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listsellingPriceRowModel" type="com.revomvpandriodapp.app.modules.gasmancontiner.data.model.ListsellingPriceRowModel"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnsellingPrice"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSellingPrice"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_14pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@string/lbl_selling_price"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_selling_price"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRown"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtN"
                android:layout_height="wrap_content"
                android:layout_weight="0.34" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{listsellingPriceRowModel.txtN}"
                style="@style/txtRobotoromanregular15" tools:text="@string/lbl_n"/>
            <TextView android:ellipsize="end" android:id="@+id/txtZero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_weight="0.66" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{listsellingPriceRowModel.txtZero}"
                style="@style/txtRobotoromanregular15" tools:text="@string/lbl_0_0"/>
        </LinearLayout>
    </LinearLayout>
</layout>
